{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 217,
  "lineage": "0b13bfa6-808f-c106-8b55-d1c157ba3a56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-013b65ed86d92eae9",
            "domain": "vpc",
            "id": "eipalloc-0c01a881a0ddc2b14",
            "instance": "i-07c90d4103dc935ca",
            "network_interface": "eni-03f238f10ef74c9c0",
            "private_dns": "ip-10-0-1-139.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-54-251-134-97.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.134.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.linux",
            "aws_security_group.linux",
            "aws_subnet.sn_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0578673ad8b711fbd",
            "domain": "vpc",
            "id": "eipalloc-02a42d0dc5191d3ea",
            "instance": "i-0048a2a9199c63f00",
            "network_interface": "eni-0764d29296f8cde0c",
            "private_dns": "ip-10-0-10-146.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.146",
            "public_dns": "ec2-18-136-232-204.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.232.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.windows",
            "aws_security_group.windows",
            "aws_subnet.sn_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08b3278ea6e379084",
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:instance/i-07c90d4103dc935ca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0004811dee0e596d5",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-07c90d4103dc935ca",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "monitoring": false,
            "primary_network_interface_id": "eni-03f238f10ef74c9c0",
            "private_dns": "ip-10-0-1-139.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_ip": "54.251.134.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0de4bc1dc15377628",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07547d4a5aaef4b0c",
            "tags": {
              "Name": "HelloWorld-Linux"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Linux"
            },
            "vpc_security_group_ids": [
              "sg-039bdb88d8d7e1c6b"
            ]
          },
          "dependencies": [
            "aws_security_group.linux",
            "aws_subnet.sn_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0231f120d90c28482",
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:instance/i-0048a2a9199c63f00",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0048a2a9199c63f00",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "monitoring": false,
            "primary_network_interface_id": "eni-0764d29296f8cde0c",
            "private_dns": "ip-10-0-10-146.ap-southeast-1.compute.internal",
            "private_ip": "10.0.10.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-015c7020ba76e19a2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06b4444e8ad51e374"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095977c57fa2cf0b7",
            "tags": {
              "Name": "HelloWorld-Windows"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b4444e8ad51e374"
            ]
          },
          "dependencies": [
            "aws_security_group.windows",
            "aws_subnet.sn_windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09d48ad82d6acee6d",
            "owner_id": "361648904729",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09c98930917d85772"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b33c4f1a8e294895",
            "owner_id": "361648904729",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d48ad82d6acee6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-09c98930917d85772"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07233d6e8daea8525",
            "route_table_id": "rtb-0b33c4f1a8e294895",
            "subnet_id": "subnet-07547d4a5aaef4b0c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main_route",
            "aws_subnet.sn_linux",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:security-group/sg-039bdb88d8d7e1c6b",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039bdb88d8d7e1c6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_linux",
            "name_prefix": null,
            "owner_id": "361648904729",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09c98930917d85772"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:security-group/sg-06b4444e8ad51e374",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b4444e8ad51e374",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_windows",
            "name_prefix": null,
            "owner_id": "361648904729",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09c98930917d85772"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_linux",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:subnet/subnet-07547d4a5aaef4b0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07547d4a5aaef4b0c",
            "map_public_ip_on_launch": false,
            "owner_id": "361648904729",
            "tags": {
              "Name": "sn_linux"
            },
            "vpc_id": "vpc-09c98930917d85772"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_windows",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:subnet/subnet-095977c57fa2cf0b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-095977c57fa2cf0b7",
            "map_public_ip_on_launch": false,
            "owner_id": "361648904729",
            "tags": {
              "Name": "sn_windows"
            },
            "vpc_id": "vpc-09c98930917d85772"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:361648904729:vpc/vpc-09c98930917d85772",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8d754166bcac3e0",
            "default_route_table_id": "rtb-0b33c4f1a8e294895",
            "default_security_group_id": "sg-0c47f7cd39c9d9d80",
            "dhcp_options_id": "dopt-cbf08fac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09c98930917d85772",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b33c4f1a8e294895",
            "owner_id": "361648904729"
          }
        }
      ]
    }
  ]
}